Fixed logo size in navbar in on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,10 @@ a.disabled {
 
 /* MaterialCSS fixes */
 
+#logo-container .material-icons {
+    line-height: 56px;
+}
+
 .nav-fixed {
   position: fixed;
   width: 100%;
